--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:postgresql://${PG_HOST:localhost}:5432/kugel
 spring.datasource.username=kugel
 spring.datasource.password=
@@ -6,3 +6,4 @@ spring.datasource.password=
 spring.flyway.url=jdbc:postgresql://${PG_HOST:localhost}:5432/kugel
 spring.flyway.user=kugel
 spring.flyway.password=
+spring.flyway.baseline-on-migrate = true
