--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -7,3 +7,5 @@ spring.flyway.url=jdbc:postgresql://${PG_HOST:localhost}:5432/kugel
 spring.flyway.user=kugel
 spring.flyway.password=
 spring.flyway.baseline-on-migrate = true
+
+spring.data.rest.base-path=/api
