--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=
 spring.flyway.url=jdbc:postgresql://${PG_HOST:localhost}:5432/kugel
 spring.flyway.user=kugel
 spring.flyway.password=
+
+spring.data.rest.base-path=/api
